assets/css/styles.css
/* ... */
.section-title::after {
  position: absolute;
  content: "";
  width: 64px;
  height: 0.18rem;
  left: 0;
  right: 0;
  margin: auto;
  top: 2rem;
  background-color: var(--first-color);
}

#qhead {
  margin-bottom: 2rem;
}

#qualify {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.section__subtitle {
  text-align: center;
  font-size: var(--small-font-size);
  margin-bottom: var(--mb-2);
  margin-top: -1rem;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: var(--font-semi);
  padding: 0.25rem 0.5rem;
  background-color: var(--input-color);
  width: 15rem;
  /*box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15); */

}



.section {
  padding-top: 3rem;
  padding-bottom: 2rem;
}

.para-color {

  color: var(--para-color);
}

/*===== LAYOUT =====*/
.bd-grid {
  max-width: 1024px;
  display: grid;
  margin-left: var(--mb-2);
  margin-right: var(--mb-2);

}

.l-header {
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  z-index: var(--z-fixed);
  background-color: var(--body-color-alt);
  box-shadow: 0 1px 4px var(--shadow-color);
  transition: 0.4s;
}

/*===== NAV =====*/
.nav {
  height: var(--header-height);
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-weight: var(--font-semi);
}
@media screen and (max-width: 767px) {
  .nav__menu {
    position: fixed;
    top: var(--header-height);
    right: -100%;
    width: 80%;
    height: 100%;
    padding: 2rem;
    background-color: var(--input-color);
    transition: 0.5s;

  }
}
.nav__item {
  margin-bottom: var(--mb-4);
}
.nav__link {
  position: relative;
  color: var(--text-color);
}
.nav__link:hover {
  position: relative;
}
.nav__link:hover::after {
  position: absolute;
  content: "";
  width: 100%;
  height: 0.18rem;
  left: 0;
  top: 2rem;
  background-color: var(--first-color);
}
.nav__logo {
  color: var(--second-color);
}

.nav__logo:hover {
  color: var(--first-color);
}
.nav__toggle {
  color: var(--second-color);
  font-size: 1.5rem;
  cursor: pointer;
}

.nav__toggle:hover {
  color: var(--first-color);
}

/*Active menu*/
.active-link::after {
  position: absolute;
  content: "";
  width: 100%;
  height: 0.18rem;
  left: 0;
  top: 2rem;
  background-color: var(--first-color);
}

/*=== Show menu ===*/
.show {
  right: 0;
}

/*===== HOME =====*/
.home {
  position: relative;
  row-gap: 5rem;
  padding: 4rem 0 5rem;
}
.home__data {
  align-self: center;
}
.home__title {
  font-size: var(--big-font-size);
  margin-bottom: var(--mb-5);
}
.home__title-color {
  color: var(--first-color); 

}

/* this is qsub type styles */

.typed-cursor {
  
}

.qsubx1 {
  color: var(--color1-dark);
}
.qsubx2 {
  color: var(--color2-dark);
}
.qsubx3 {
  color: var(--color3-dark);
}
.qsubx4 {
  color: var(--color4-dark);
}
.qsubx5 {
  color: var(--color5-dark);
}
.qsubx6 {
  color: var(--color6-dark);
}




#xplay, #xplay2 {
  cursor: pointer;
  
}


.home__social {
  display: flex;
  flex-direction: column;
}
.home__social-icon {
  width: max-content;
  margin-bottom: var(--mb-2);
  font-size: 1.5rem;
  color: var(--second-color);
}
.home__social-icon:hover {
  color: var(--first-color);
}
.home__img {
  position: absolute;
  right: 0;
  bottom: 0;
  width: 260px;
}
.home__blob {
  fill: var(--first-color);
  
}
.home__blob-img {
  width: 360px;
}

/*BUTTONS*/
.button {
  display: inline-block;
  background-color: var(--first-color);
  color: #fff;
  padding: 0.75rem 2.5rem;
  font-weight: var(--font-semi);
  border-radius: 0.5rem;
  transition: 0.3s;
}
.button:hover {
  box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.15);

}

/* ===== ABOUT =====*/
.about__container {
  row-gap: 2rem;
  text-align: center;
}
.about__subtitle {
  margin-bottom: var(--mb-2);
}
.about__text{
  text-align: justify;
}
.about__img {
  justify-self: center;
}

.about__img img {
  width: 200px;
  border-radius: 0.5rem;
}

.about__info {
  display: flex;
  justify-content: space-between;
  margin-top: var(--mb-2);
  margin-bottom: var(--mb-2);
}

.about__info-title {
  font-size: var(--h2-font-size);
  font-weight: var(--font-semi);
  color: var(--second-color);
}

.about__info-name {
  font-size: var(--small-font-size);
}

.about__info-title,
.about__info-name {
  display: block;
  text-align: center;
}

/* ===== SKILLS =====*/
.skills__container {
  row-gap: 2rem;
  text-align: center;
}
.skills__subtitle {
  margin-bottom: var(--mb-2);
}
.skills__text {
  margin-bottom: var(--mb-4);
}
.skills__data {
       display: flex;
       justify-content: space-between;
       align-items: center;
       position: relative;
       font-weight: var(--font-semi);
       padding: 0.5rem 1rem;
       margin-bottom: var(--mb-4);
       border-radius: 0.5rem;
       background-color: var(--body-color-alt);
       box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15);
  /* box-shadow: 0px 4px 25px var(--shadow-color); */
}
.skills__icon {
  font-size: 2rem;
  margin-right: var(--mb-2);
  color: var(--first-color);
}
.skills__names {
  display: flex;
  align-items: center;
}
.skills__bar {
  position: absolute;
  left: 0;
  bottom: 0;
  background-color: var(--first-color);
  height: 0.25rem;
  border-radius: 0.5rem;
  z-index: var(--z-back);
}
.skills__html {
  width: 95%;
}
.skills__css {
  width: 78%;
}
.skills__js {
  width: 30%;
}
.skills__ux {
  width: 60%;
}
.skills__img {
  border-radius: 0.5rem;
}


/*==================== QUALIFICATION ====================*/
.qualification__tabs {
  display: flex;
  justify-content: space-evenly;
  margin-bottom: var(--mb-2);
}

.qualification__button {
  font-size: var(--h3-font-size);
  font-weight: var(--font-semi);
  margin-bottom: var(--mb-4);
  cursor: pointer;
}

.qualification__button:hover {
  color: var(--text-color-light);
}

.qualification__icon {
  font-size: 1.3rem;
  margin-right: var(--mb-0-2);
}

.qualification__data {
  display: grid;
  grid-template-columns: 1fr max-content 1fr;
  column-gap: 1.5rem;
}
/* ... */

